# talos_harmonic

./: .gitignore  README.md
discarded/: talos_controller_bridge.launch.py
mujoco_ocp/: simulate.py
mujoco_talos/: simulate.py
talos_harmonic/: CMakeLists.txt  package.xml
talos_harmonic/config/: talos_configuration.yaml
talos_harmonic/controller/: ros2_controller.yaml
talos_harmonic/controllers/: dummy_controllers.yaml  jpc_parameters.yaml  lfc_parameters.yaml
talos_harmonic/launch/: controller_bridge.yaml  gz_spawn.launch.py  gz_world.launch.py  load_controllers.launch.py  robot_spawn.launch.py  switch_controllers.launch.py  talos_controller_bridge.launch.py  talos_spawn.launch.py
talos_harmonic/launch/gz_launcher/: __init__.py  gz.py  invoke.py  logging.py  robot_description.py  robot_state_publisher.py  ros2_control.py  utils.py
talos_harmonic/messages/: initial_position.yaml
talos_harmonic/models/talos/: empty_talos_gz.sdf  model.config  model.sdf  talos_reduced.urdf  talos_reduced_2.urdf  talos_reduced_really_good_gz.sdf
talos_harmonic/models/talos/meshes/arm/: arm_7_detachable.STL
talos_harmonic/models/talos/meshes/gripper/: gripper_camera_mount_link.STL
talos_harmonic/models/talos/meshes/skincell/: ITRSkinCellV1.stl
talos_harmonic/models/talos/meshes/v2/: ankle_X_lo_res_camera.stl
talos_harmonic/models/talos_description/: talos.sdf  talos.urdf
talos_harmonic/scripts/: publish.py  state_publisher.cpp
talos_harmonic/talos_harmonic/: __init__.py
talos_harmonic/talos_harmonic/launch/: __init__.py  arguments.py  gz.py  ros2_control.py
(+18 files in other folders)
